--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.7.17",
-    "@heroicons/react": "^2.0.18",
+    "@heroicons/react": "^2.2.0",
     "@hookform/resolvers": "^3.3.2",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@next/eslint-plugin-next": "^15.5.2",
@@ -33,7 +33,7 @@
     "framer-motion": "^10.16.5",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.294.0",
-    "next": "^15.0.0",
+    "next": "^15.6.0-canary.16",
     "next-auth": "^4.24.5",
     "node.js": "^0.0.1-security",
     "nodemailer": "^6.9.7",
