23-09 afternoon commit no errors

--- a/env.example
+++ b/env.example
@@ -1,5 +1,5 @@
 # Database
-DATABASE_URL="postgresql://username:password@localhost:5432/amealio_careers"
+DATABASE_URL="postgresql://localhost:Rat@1434@localhost:5432/amealio_careers"
 
 # NextAuth.js
 NEXTAUTH_URL="http://localhost:3000"
