--- a/package.json
+++ b/package.json
@@ -33,14 +33,14 @@
     "framer-motion": "^10.16.5",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.294.0",
-    "next": "^15.6.0-canary.16",
-    "next-auth": "^4.24.5",
+    "next": "^15.5.3",
+    "next-auth": "^4.24.11",
     "node.js": "^0.0.1-security",
     "nodemailer": "^6.9.7",
     "postcss": "^8.4.32",
-    "react": "^18.2.0",
+    "react": "^18.3.1",
     "react-datepicker": "^4.25.0",
-    "react-dom": "^18.2.0",
+    "react-dom": "^18.3.1",
     "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.48.2",
     "react-hot-toast": "^2.4.1",
