Applicant page compete functionality and work flow compleated

--- a/env.example
+++ b/env.example
@@ -23,4 +23,4 @@ JWT_SECRET="your-jwt-secret-here"
 # Application Settings
 NEXT_PUBLIC_APP_URL="http://localhost:3000"
 MAX_FILE_SIZE=5242880
-ALLOWED_FILE_TYPES="pdf,doc,docx"
+ALLOWED_FILE_TYPES="*"
