--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "@heroicons/react": "^2.2.0",
     "@hookform/resolvers": "^3.10.0",
     "@next-auth/prisma-adapter": "^1.0.7",
-    "@prisma/client": "^6.15.0",
+    "@prisma/client": "^6.16.2",
+    "@prisma/extension-accelerate": "^2.0.2",
     "@tailwindcss/forms": "^0.5.10",
     "@tailwindcss/typography": "^0.5.16",
     "autoprefixer": "^10.4.20",
@@ -36,6 +37,7 @@
     "next-auth": "^4.24.11",
     "node.js": "^0.0.1-security",
     "nodemailer": "^6.9.16",
+    "pg": "^8.16.3",
     "postcss": "^8.5.0",
     "react": "^18.3.1",
     "react-datepicker": "^7.4.0",
@@ -60,8 +62,20 @@
     "@types/uuid": "^10.0.0",
     "eslint": "^9.17.0",
     "eslint-config-next": "^15.5.3",
-    "prisma": "^6.15.0",
+    "prisma": "^6.16.2",
     "tsx": "^4.19.2",
     "typescript": "^5.7.2"
-  }
+  },
+  "main": "next.config.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/raghavthakkar789/amealio-careers-portal.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/raghavthakkar789/amealio-careers-portal/issues"
+  },
+  "homepage": "https://github.com/raghavthakkar789/amealio-careers-portal#readme"
 }
