--- a/package.json
+++ b/package.json
@@ -14,10 +14,10 @@
     "db:studio": "prisma studio"
   },
   "dependencies": {
+    "@auth/prisma-adapter": "^2.10.0",
     "@headlessui/react": "^2.2.0",
     "@heroicons/react": "^2.2.0",
     "@hookform/resolvers": "^3.10.0",
-    "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^6.16.2",
     "@prisma/extension-accelerate": "^2.0.2",
     "@tailwindcss/forms": "^0.5.10",
@@ -33,7 +33,7 @@
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.468.0",
     "next": "^15.5.3",
-    "next-auth": "^4.24.11",
+    "next-auth": "^5.0.0-beta.29",
     "nodemailer": "^6.9.16",
     "pg": "^8.16.3",
     "postcss": "^8.5.0",
